# WSI

./: .gitignore  README.md
2022/lista_1/: .gitignore  env.yaml  results.csv
2022/lista_1/config/: main.yaml
2022/lista_1/src/: experiments.py  frame_data.py  main.py
2022/lista_1/src/algoritghm/: a_star.py
2022/lista_1/src/metrics/: heuretics.py  heuretics_handler.py
2022/lista_1/src/puzzle/: solve_game.py  state.py
2022/lista_1/src/utils/: config.py  get_neighbors.py  is_solvable.py  random_state.py  (+1 more)
2022/lista_3/: .gitignore  .pre-commit-config.yaml  environment.yaml
2022/lista_3/configs/: train.yaml
2022/lista_3/src/: show_sample.py  train.py
lab3/: README.md  game_client  game_client.c  game_random_bot.c  game_smart_bot  game_smart_bot.c  heuristic.c  opening_book.c  opening_book.h  opening_book.txt  random_bot  server  smart_bot  test_opening.c
lab_3/: Makefile  README.md
lab_3/extra/: game_client
lab_4/: environment.yml
lab_4/dbscan/: dbscan.py  mnist_dbscan_experiments.ipynb
lab_4/dbscan/results_dbscan/: best_configuration.csv  parameter_exploration.csv
lab_4/kmeans/: kmeans.py  mnist_kmeans_experiments.ipynb
lab_4/kmeans/results_kmeans/: experiment_summary.txt
lab_5/: README.md  environment.yaml
lab_5/config/: config_train.yaml
lab_5/src/: train.py
lab_5/src/models/: neural_network.py
lab_5/src/propagation/: CMakeLists.txt  Makefile  popragation_algorithms.cu  popragation_algorithms.hpp  propagation_algorithms_gpu.cu  propagation_algorithms_gpu.hpp
lab_5/src/utils/: data.py
lab_5/tests/test_utils/: test_data.py
(+25 files in other folders)
